Bug 148725 - Paragraph DF is written if DF Paragraph dialog being opened, reset being pressed followed by OK
Summary: Paragraph DF is written if DF Paragraph dialog being opened, reset being pres...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Formatting-Text-Diverse
  Show dependency treegraph
 
Reported: 2022-04-22 14:50 UTC by Telesto
Modified: 2023-11-05 12:35 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (45.55 KB, application/vnd.oasis.opendocument.text)
2022-04-22 14:50 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-04-22 14:50:14 UTC
Description:
Paragraph DF is written if DF Paragraph dialog being opened, reset being pressed followed by OK

Steps to Reproduce:
1. Open the attached file
2. Place cursor in the yellow area (not that really matters)
3. Sidebar -> Style inspector -> Notice 3 entry's
4. Format -> Paragraph -> Text flow tab
5. Press reset button
6. Press OK button

Actual Results:
DF introduced

Expected Results:
No change (reset)


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4659fc2f0a7223a89446edff0b77e58758b5edf5
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (nl_NL); UI: en-US
Calc: CL Jumbo
Comment 1 Telesto 2022-04-22 14:50:29 UTC
Created attachment 179731 [details]
Example file
Comment 2 Dieter 2022-05-07 07:17:34 UTC
I confirm it with

Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 83d0f2eebae41d431d9a5bfd1a918523977752d0
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

It seems to be a more general problem: If you select text and choose font size 10 (font size of PS) fonz size is added to Chracter DF in style inspector.
Comment 3 Aron Budea 2022-05-08 03:58:18 UTC
I'm assuming the bug isn't with the style inspector, that's just showing the properties set, so I'm removing that META from the assignment.
Comment 4 Telesto 2022-05-17 19:22:30 UTC
@Caolan,
You might me interested in this one. This likely an UI problem
Comment 5 Aron Budea 2022-05-17 22:12:00 UTC
Interestingly, this is a regression from the following commit, bibisected using repo bibisect-linux-64-6.1. Adding CC: to Mike Kaganski.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=b37a46fdf91dbc66f6ddc1c070aec70716d94a01
author		Mike Kaganski <mike.kaganski@collabora.com>	2018-02-21 11:25:16 +0300
committer	Mike Kaganski <mike.kaganski@collabora.com>	2018-02-23 07:15:28 +0100

tdf#115938: Properly detect shadow size control's changed state
Comment 7 Commit Notification 2023-10-17 05:37:01 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e134bcf0272929ebba8edc35ae0bdd8f934e624a

Related: tdf#148725 Fix SvxExtParagraphTabPage::ChangesApplied

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-10-17 05:38:03 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d4efce34e0bd1e99d115ece4442ead39b90b89bb

tdf#148725: Reset must clear respective items from m_pOutSet

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Dieter 2023-11-05 12:35:07 UTC
VERIFIED with

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c0c8cffd3541e3cd616c96791b04e7ebf2b2ed03
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

Mike, thank you for fixing it!