Related: tdf#148725 Fix SvxExtParagraphTabPage::ChangesApplied

It was setting values, instead of saving them, ever since commit
a212ef2b6ebadb22a9abf6d042aa2b5fd9ac1cf0 (tdf#93901: apply handling in
style/edit dialog improved, 2015-09-11).

The same thing in SvxStdParagraphTabPage::ChangesApplied was fixed in
commit 8b0dae14a5af0ad2892bac0e606467af6148c8d1 (weld
SvxStdParagraphTabPage, 2018-06-14); but a similar commit
eb1d6b16e787a87c3d918135ca98c5694d352557 (weld SvxExtParagraphTabPage,
2018-06-14) kept this in SvxExtParagraphTabPage.

Change-Id: I5fb61a9416dab4ccf9fa690eca87a16f7b9378bd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158066
Tested-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>